Resolves: tdf#73211 gtk checkboxes need erase afer toggling

because an unchecked checkbox can have a smaller paint area
than a checked checkbox. This has always bugged me

(cherry picked from commit d194074aa34e3724dd9b93fbc81bf2ba793cd37a)

Conflicts:
	vcl/unx/gtk3/gdi/gtk3salnativewidgets-gtk.cxx

Change-Id: Iac0f075089611b47c381863a9655445d732bfddc
Reviewed-on: https://gerrit.libreoffice.org/15510
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>