vcl/unx/gtk/gdi/salnativewidgets-gtk.cxx
@@ -441,6 +441,8 @@ void GtkData::initNWF( void )
     pSVData->maNWFData.mnMenuFormatBorderX = xthickness + horizontal_padding;
     pSVData->maNWFData.mnMenuFormatBorderY = ythickness + vertical_padding;
 
+    pSVData->maNWFData.mbCheckBoxNeedsErase = true;
+
     if( SalGetDesktopEnvironment() == "KDE" )
     {
         // #i97196# ensure a widget exists and the style engine was loaded
